# sim_poc

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  README.md  docker-compose.generated.yaml  docker-compose.yaml  entrypoint.sh  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
accel/: CMakeLists.txt  README.md
accel/src/: node.cpp  node_sim_bindings.cpp
docs/: ap_registration.puml  architecture.puml  hub_registration.puml  requirements.md  rt_registration.puml
experimental/multi-ip/: Dockerfile  README.md  check_ipv6_which_ip.py  docker-compose.yaml  gen_compose.py  main.py  requirements.txt
experimental/zmq/: zmq_client.py  zmq_server.py
node_sim/: .clang-tidy  CMakeLists.txt
node_sim/cpp_src/: node.hpp  node_sim_bindings.cpp
node_sim/src/: ap.hpp
nodes/: CMakeLists.txt  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt
nodes/cpp_src/: node_sim_bindings.cpp  rt.cpp  rt.hpp
nodes/nodes/: __init__.py  ap.py  rt.py
src/: ap_controller.py  ap_routes.py  ap_worker.py  api_nms.py  app.py  common.py  config.py  controller_ap.py  main.py  manager_hub.py  manager_network.py  models.py  models_api.py  nms_api.py  routes_ap.py  routes_hub.py  routes_network.py  settings.py  worker_api.py
src/controller/: api.py  app.py  common.py  comms.py  ctrl_api.py  manager_ap.py  manager_hub.py  manager_network.py  managers.py  routes_ap.py  routes_hub.py  routes_network.py  worker_ctrl.py
src/worker/: ap.py  api.py  api_types.py  comms.py  main.py  node.py  rt.py  utils.py  worker.py  worker_api.py  worker_api_types.py
src_cpp/: ap.cpp  ap.hpp  node.cpp  node.hpp  node_sim_bindings.cpp  rt.cpp  rt.hpp
src_py/: ap_demo.py  db.py
templates/: template.py
tests/: conftest.py  test_accel_bindings.py  test_ap_routes.py  test_hub_routes.py  test_models.py  test_network_routes.py  test_nms_hub_create_request.py  test_root_routes.py  test_worker_api.py  utils.py
utils/: ap_demo.py  gen_compose.py  test_ipv6_which_ip.py
